<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/loangenius"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="@string/loangenius"
        android:fontFamily="@font/monsterrat_extrabold"
        android:textSize="45sp"
        android:layout_marginLeft="15dp"

        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="342dp"
        android:layout_height="118dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/firstrunq"
        android:textAlignment="textStart"
        android:textSize="23sp"
        android:typeface="sans"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="419dp">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/firstrunmth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:text="@string/firstrunyear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/month"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="332dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/monthhint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/year"
            android:layout_width="93dp"
            android:layout_height="70dp"
            android:layout_marginStart="156dp"
            android:layout_marginBottom="332dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/yearhint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="890dp"
            android:layout_height="557dp"
            android:layout_marginStart="101dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/firstrunpic"
            app:srcCompat="@drawable/firstpersonrun" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/letsrock"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:text="@string/firstsubmit" />


</LinearLayout>