<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".InsideActivity">

    <TextView
        android:id="@+id/dateselctions"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/roboto"
        android:text="@string/loansd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/percentageans1"
        android:layout_width="291dp"
        android:layout_height="77dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="12dp"
        android:hint="In Percentage"
        app:boxStrokeColor="#3DD9ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/percentageh1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/amtans1"
        android:layout_width="291dp"
        android:layout_height="77dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:hint="In Decimals"
        app:boxStrokeColor="#3DD9ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amth1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/amttxt"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/amt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interesttxt"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="155dp"
        android:fontFamily="@font/roboto"
        android:text="@string/interest"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rmpttxt"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="245dp"
        android:fontFamily="@font/roboto"
        android:text="@string/rpmt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rmptans1"
        android:layout_width="291dp"
        android:layout_height="77dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="12dp"
        app:boxStrokeColor="#e6c300"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rmptmths"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="In Months"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="408dp"
        android:orientation="horizontal"
        android:paddingHorizontal="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15sp"
            android:text="@string/rb1sel" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/rb2sel" />
    </RadioGroup>

    <Button
        android:id="@+id/calca"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="174dp"
        android:layout_height="70dp"
        android:text="@string/calcln"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <EditText
        android:id="@+id/lsmths"
        android:layout_width="85dp"
        android:layout_height="66dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="148dp"
        android:ems="10"
        android:hint="MM"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lsyrs"
        android:layout_width="120dp"
        android:layout_height="66dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:hint="YYYY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>